2016-02-17  Daniel Standage <daniel.standage@gmail.com>

   * ./github/CONTRIBUTING.md,.github/PULL_REQUEST_TEMPLATE.md: auto-populate
   pull requests with checklist using GitHub's new template feature
   * doc/dev/coding-guidelines-and-review.rst: update developer docs with
   compensatory changes

2015-08-14  Luiz Irber  <khmer@luizirber.org>

   * lib/subset.cc: check iterator before decrementing in
   repartition_largest_partition

2015-10-25  Titus Brown  <titus@idyll.org>

   * scripts/normalize-by-median.py,tests/test_normalize_by_median.py: test
   and fix for close of --output file after first input file.

2015-10-05  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * lib/magic: add file extensions, one media type, and a better comment
   * khmer/__init__.py: Replace an errant 'Presence table' with 'node graph'

2015-09-28  Lisa Cohen  <ljcohen@ucdavis.edu>

   * tests/test_read_handling.py: created new file with interleave-reads,
   split-paired-reads, and extract-paired-reads functions
   * tests/test_scripts.py: removed functions mentioned above

2015-09-19  Titus Brown  <titus@idyll.org>

   * scripts/filter-abund.py: fixed bug with -o and --gzip used together.
   * tests/test_scripts.py: added test for fixed bug.
   * sandbox/count-kmers.py: added executable bit.

2015-09-17  Camille Scott  <camille.scott.w@gmail.com>

   * scripts/interleave-reads.py: Added --no-reformat flag
   to disable format checking and renaming of headers
   * tests/{test_scripts.py, test-data/paired.malformat*}: Tests
   and test data for --no-reformat flag.

2015-09-11  Russell Y. Neches  <ryneches@ucdavis.edu>

   * lib/hashbits.hh: added get_raw_tables to Hashbits
   * khmer/_khmer.cc: added get_raw_tables to Hashbits
   * tests/test_nodegraph.py: added test for Nodegraph.get_raw_tables

2015-09-11  Camille Scott  <camille.scott.w@gmail.com>

   * lib/hashbits.cc: Make hasbits::update_from() correctly update
   _occupied_bins.